--- a/Labs/Week05_ANOVA1_Lab.html
+++ b/Labs/Week05_ANOVA1_Lab.html
@@ -113,19 +113,51 @@ if (window.hljs) {
 <div id="section-intro-to-todays-lab" class="section level2">
 <h2>Intro to Today’s Lab</h2>
 <p>During today’s lab, you’ll apply the concepts discussed during this
-week’s lecture. Each lab consists of 10 tasks, with corresponding
-questions you can answer. Please note that the questions are not
-required and not marked, although they do provide a helpful source of
-formative feedback that will help you gauge your understanding.</p>
-<p>Intro Goes Here</p>
+week’s lecture. Each lab consists of a range of tasks, with
+corresponding questions you can answer. Please note that the questions
+are not required and not marked, although they do provide a helpful
+source of formative feedback that will help you gauge your
+understanding.</p>
+<div id="section-this-weeks-study" class="section level3">
+<h3>This Week’s Study</h3>
+<p>You’ll be working with data adapted from studies on emotion
+recognition (see <a
+href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0243708">here</a>).
+Specifically, you’re testing whether mask-wearing during COVID
+influenced children’s ability to correctly identify emotions during
+social interactions. You’ll be investigating this through two separate
+experiments.</p>
+<div id="section-experiment-1" class="section level4">
+<h4>Experiment 1</h4>
+<p>In the first experiment, you investigated whether the region of the
+face covered affects a child’s ability to recognize emotions conveyed by
+facial expressions. You recruited a sample of primary-school aged
+children. All participants were presented with photos of people making
+stereotypical facial expressions associated with 5 different emotions
+(happiness, sadness, fear, anger, disgust). However, participants were
+grouped into one of three conditions. In the first condition, stimuli
+were unobstructed. In the second condition, stimuli were wearing
+sunglasses so that the eyes were obstructed. In the third condition,
+stimuli were wearing masks so that the mouth was obstructed (see
+examples below).</p>
+<p><img src="images/Week5_expStimuli.png" width="697" /></p>
+<p>Participants viewed 10 photos per emotion, for a total of 50 photos.
+Photos were presented in random order for each participant.</p>
+<p>You can download the dataset from the first experiment <a
+href="">here</a>. It contains the following variables:</p>
+</div>
+</div>
 <div id="section-learning-objectives" class="section level3">
 <h3>Learning Objectives</h3>
 <p>At the end of this lab, you will be able to:</p>
 <ol style="list-style-type: decimal">
-<li>Objective 1</li>
-<li>Objective 2</li>
-<li>Objective 3</li>
-<li>Objective 4</li>
+<li>Identify hypotheses which may be tested using ANOVAs</li>
+<li>Run an appropriate power analysis for both one-way and
+repeated-measures ANOVAs</li>
+<li>Check assumptions for both one-way and repeated-measures ANOVAs</li>
+<li>Use SPSS to perform both one-way and repeated-measures ANOVAs</li>
+<li>Interpret and report results from both one-way and repeated-measures
+ANOVAs</li>
 </ol>
 </div>
 </div>
@@ -449,7 +481,7 @@ session$onSessionEnded(function() {
 
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", label = "q2-1", question = structure("What is the percentage of the sample who score between 95 and 110 on the WAIS? Please enter your answer as a whole number.", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_c8ad0a2", 
+"character")), answers = list(structure(list(id = "lnr_ans_6f377b4", 
     option = "38", value = 38, label = structure("38", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -460,14 +492,14 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", labe
 "character")), message = structure("38% of the sample scored between 95 and 110.", html = TRUE, class = c("html", 
 "character")), post_message = NULL), ids = list(answer = "q2-1-answer", 
     question = "q2-1"), loading = NULL, random_answer_order = FALSE, 
-    allow_retry = FALSE, seed = 1225321852.92941, options = list(
+    allow_retry = FALSE, seed = 1614478988.7482, options = list(
         min = NA, max = NA, step = NA, tolerance = 1.5e-08)), class = c("learnr_numeric", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", label = "q2-2", question = structure("What percentage of the sample scored below 87? Please enter your answer as a whole number.", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_b5320cd", 
+"character")), answers = list(structure(list(id = "lnr_ans_6381c90", 
     option = "19", value = 19, label = structure("19", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -478,7 +510,7 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", labe
 "character")), message = structure("19% of the sample received a score lower than 87.", html = TRUE, class = c("html", 
 "character")), post_message = NULL), ids = list(answer = "q2-2-answer", 
     question = "q2-2"), loading = NULL, random_answer_order = FALSE, 
-    allow_retry = FALSE, seed = 455019063.288115, options = list(
+    allow_retry = FALSE, seed = 2063426912.03914, options = list(
         min = NA, max = NA, step = NA, tolerance = 1.5e-08)), class = c("learnr_numeric", 
 "tutorial_question")), session = session)
 </script>
@@ -486,7 +518,7 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", labe
 
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", label = "q2-3", question = structure("You have a participant, J, who scored 138. Fill in the blank: “_% of the sample received a score at least as high as Participant J.” Please enter your answer as a whole number.", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_d3b0763", 
+"character")), answers = list(structure(list(id = "lnr_ans_f87f69e", 
     option = "1", value = 1, label = structure("1", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -497,14 +529,14 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", labe
 "character")), message = structure("Only 1% of the sample scored at least 138.", html = TRUE, class = c("html", 
 "character")), post_message = NULL), ids = list(answer = "q2-3-answer", 
     question = "q2-3"), loading = NULL, random_answer_order = FALSE, 
-    allow_retry = FALSE, seed = 1415470012.34087, options = list(
+    allow_retry = FALSE, seed = 1853677153.13681, options = list(
         min = NA, max = NA, step = NA, tolerance = 1.5e-08)), class = c("learnr_numeric", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", label = "q2-4", question = structure("If you wanted to isolate the 10% of your sample with the lowest scores, what cut-off score would you use?", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_9196997", 
+"character")), answers = list(structure(list(id = "lnr_ans_7be129c", 
     option = "81", value = 81, label = structure("81", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -515,7 +547,7 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", labe
 "character")), message = structure("The lowest 10% of the sample scored below 81.", html = TRUE, class = c("html", 
 "character")), post_message = NULL), ids = list(answer = "q2-4-answer", 
     question = "q2-4"), loading = NULL, random_answer_order = FALSE, 
-    allow_retry = FALSE, seed = 1175597739.45257, options = list(
+    allow_retry = FALSE, seed = 626083666.208457, options = list(
         min = NA, max = NA, step = NA, tolerance = 1.5e-08)), class = c("learnr_numeric", 
 "tutorial_question")), session = session)
 </script>
@@ -527,7 +559,7 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", labe
 <!--/html_preserve-->
 <!--html_preserve-->
 <script type="application/shiny-prerendered" data-context="execution_dependencies">
-{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93]}},"value":[{"type":"character","attributes":{},"value":["assertthat","backports","base","broom","bslib","cachem","cellranger","checkmate","cli","colorspace","commonmark","compiler","crayon","datasets","DBI","dbplyr","digest","dplyr","ellipsis","evaluate","fansi","fastmap","forcats","fs","gargle","generics","ggplot2","glue","googledrive","googlesheets4","graphics","grDevices","grid","gtable","haven","hms","htmltools","htmlwidgets","httpuv","httr","jquerylib","jsonlite","kableExtra","knitr","later","learnr","lifecycle","lubridate","magrittr","markdown","methods","mime","modelr","munsell","pillar","pkgconfig","promises","purrr","R6","Rcpp","readr","readxl","reprex","rlang","rmarkdown","rprojroot","rstudioapi","rvest","sass","scales","shiny","shinyjs","stats","stringi","stringr","svglite","systemfonts","tibble","tidyr","tidyselect","tidyverse","tools","tzdb","utf8","utils","vctrs","viridisLite","webshot","withr","xfun","xml2","xtable","yaml"]},{"type":"character","attributes":{},"value":["0.2.1","1.4.1","4.1.3","1.0.5","0.7.0","1.0.6","1.1.0","2.1.0","3.6.1","2.1-0","1.9.0","4.1.3","1.5.2","4.1.3","1.1.3","2.2.1","0.6.29","1.1.4","0.3.2","0.21","1.0.4","1.2.0","0.5.1","1.6.2","1.2.0","0.1.3","3.5.0","1.6.2","2.0.0","1.0.0","4.1.3","4.1.3","4.1.3","0.3.3","2.5.0","1.1.1","0.5.8.1","1.6.1","1.6.15","1.4.3","0.1.4","1.8.0","1.3.4","1.43","1.3.0","0.11.5","1.0.3","1.8.0","2.0.3","1.9","4.1.3","0.12","0.1.11","0.5.0","1.9.0","2.0.3","1.2.0.1","1.0.2","2.5.1","1.0.8.3","2.1.2","1.4.0","2.0.1","1.1.1","2.14","2.0.3","0.13","1.0.2","0.4.9","1.3.0","1.7.4","2.1.0","4.1.3","1.7.12","1.5.0","2.1.0","1.0.4","3.2.1","1.3.1","1.2.0","1.3.2","4.1.3","0.3.0","1.2.3","4.1.3","0.6.5","0.4.2","0.5.3","3.0.0","0.39","1.3.3","1.8-4","2.3.7"]}]}]}
+{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95]}},"value":[{"type":"character","attributes":{},"value":["assertthat","backports","base","broom","bslib","cachem","cellranger","checkmate","cli","colorspace","commonmark","compiler","crayon","datasets","DBI","dbplyr","digest","dplyr","ellipsis","evaluate","fansi","fastmap","forcats","fs","gargle","generics","ggplot2","glue","googledrive","googlesheets4","graphics","grDevices","grid","gtable","haven","highr","hms","htmltools","htmlwidgets","httpuv","httr","jquerylib","jsonlite","kableExtra","knitr","later","learnr","lifecycle","lubridate","magrittr","markdown","methods","mime","modelr","munsell","pillar","pkgconfig","png","promises","purrr","R6","Rcpp","readr","readxl","reprex","rlang","rmarkdown","rprojroot","rstudioapi","rvest","sass","scales","shiny","shinyjs","stats","stringi","stringr","svglite","systemfonts","tibble","tidyr","tidyselect","tidyverse","tools","tzdb","utf8","utils","vctrs","viridisLite","webshot","withr","xfun","xml2","xtable","yaml"]},{"type":"character","attributes":{},"value":["0.2.1","1.4.1","4.1.3","1.0.5","0.7.0","1.0.6","1.1.0","2.1.0","3.6.1","2.1-0","1.9.0","4.1.3","1.5.2","4.1.3","1.1.3","2.2.1","0.6.29","1.1.4","0.3.2","0.21","1.0.4","1.2.0","0.5.1","1.6.2","1.2.0","0.1.3","3.5.0","1.6.2","2.0.0","1.0.0","4.1.3","4.1.3","4.1.3","0.3.3","2.5.0","0.10","1.1.1","0.5.8.1","1.6.1","1.6.15","1.4.3","0.1.4","1.8.0","1.3.4","1.43","1.3.0","0.11.5","1.0.3","1.8.0","2.0.3","1.9","4.1.3","0.12","0.1.11","0.5.0","1.9.0","2.0.3","0.1-8","1.2.0.1","1.0.2","2.5.1","1.0.8.3","2.1.2","1.4.0","2.0.1","1.1.1","2.14","2.0.3","0.13","1.0.2","0.4.9","1.3.0","1.7.4","2.1.0","4.1.3","1.7.12","1.5.0","2.1.0","1.0.4","3.2.1","1.3.1","1.2.0","1.3.2","4.1.3","0.3.0","1.2.3","4.1.3","0.6.5","0.4.2","0.5.3","3.0.0","0.39","1.3.3","1.8-4","2.3.7"]}]}]}
 </script>
 <!--/html_preserve-->
 </div>
